--- a/force-app/main/default/aura/rrInput/rrInput.cmp
+++ b/force-app/main/default/aura/rrInput/rrInput.cmp
@@ -6,10 +6,12 @@
     <aura:attribute name="placeholder"  type="String" default=""/>
     <aura:attribute name="errorMessage" type="String" default=""/>
     <aura:attribute name="label"        type="String" default=""/>
+    <aura:attribute name="maxValue"        type="String" default=""/>
     <aura:attribute name="required"     type="Boolean" default="{!false}"/>
     <aura:attribute name="disabled"     type="Boolean" default="{!false}"/>
     <!--=============================================================================================================-->
     <aura:attribute name="type"         type="String" default="text"/>
+    <aura:attribute name="values"         type="String[]" default=""/>
     <!--=============================================================================================================-->
     <aura:attribute name="showPassword" type="Boolean" default="{!false}" access="private"/>
     <aura:attribute name="showPasswordInput" type="Boolean" default="{!true}" access="private"/>
@@ -33,30 +35,40 @@
         </aura:if>
 
         <div class="rri-body">
-            <aura:if isTrue="{! v.iconName != ''}">
-                <div class="rri-icon" title="{!'title= ' + if(v.iconTitle != '', v.iconTitle, v.placeholder)}">
-                    <c:RRIcon iconName="{!v.iconName}" color="{!v.iconColor}"/>
-                </div>
+            <aura:if isTrue="{!v.type != 'picklist'}">
+                <aura:if isTrue="{! v.iconName != ''}">
+                    <div class="rri-icon" title="{!'title= ' + if(v.iconTitle != '', v.iconTitle, v.placeholder)}">
+                        <c:RRIcon iconName="{!v.iconName}" color="{!v.iconColor}"/>
+                    </div>
+                </aura:if>
+
+                <aura:if isTrue="{!v.type == 'password'}">
+                    <div class="rri-password">
+                        <aura:if isTrue="{!v.showPasswordInput}">
+
+                            <lightning:input aura:id="rr-input" type="{!if(v.showPassword, 'text', 'password')}"
+                                             class="{!if(v.errorMessage != '', 'rr-input-error','')}" disabled="{!v.disabled}"
+                                             placeholder="{!v.placeholder}" value="{!v.valueString}" label="" name=""/>
+
+                            <div id="new" class="rri-show-password" onclick="{!c.togglePassword}">
+                                <c:RRIcon iconName="icon-view" color="{!v.passwordIconColor}"/>
+                            </div>
+
+                        </aura:if>
+                    </div>
+                    <aura:set attribute="else">
+                        <lightning:input aura:id="rr-input" type="{!v.type}" class="{!if(v.errorMessage != '', 'rr-input-error','')}"
+                                         disabled="{!v.disabled}"  placeholder="{!v.placeholder}" value="{!v.valueString}" label="" name="" max="{!v.maxValue}"/>
+                    </aura:set>
+                </aura:if>
             </aura:if>
-
-            <aura:if isTrue="{!v.type == 'password'}">
-                <div class="rri-password">
-                    <aura:if isTrue="{!v.showPasswordInput}">
-
-                        <lightning:input aura:id="rr-input" type="{!if(v.showPassword, 'text', 'password')}"
-                                         class="{!if(v.errorMessage != '', 'rr-input-error','')}" disabled="{!v.disabled}"
-                                         placeholder="{!v.placeholder}" value="{!v.valueString}" label="" name=""/>
-
-                        <div id="new" class="rri-show-password" onclick="{!c.togglePassword}">
-                            <c:RRIcon iconName="icon-view" color="{!v.passwordIconColor}"/>
-                        </div>
-
-                    </aura:if>
-                </div>
-                <aura:set attribute="else">
-                    <lightning:input aura:id="rr-input" type="{!v.type}" class="{!if(v.errorMessage != '', 'rr-input-error','')}"
-                                     disabled="{!v.disabled}"  placeholder="{!v.placeholder}" value="{!v.valueString}" label="" name=""/>
-                </aura:set>
+            <aura:if isTrue="{!v.type == 'picklist'}">
+                <lightning:select class="lightningInput" label="" disabled="{!v.disabled}" value="{!v.valueString}" >
+                    <option text=""></option>
+                    <aura:iteration items="{!v.values}" var="option">
+                        <option text="{!option}"></option>
+                    </aura:iteration>
+                </lightning:select>
             </aura:if>
         </div>
 
