--- a/unpackaged/main/default/layouts/Participant__c-PII Compliant.layout-meta.xml
+++ b/unpackaged/main/default/layouts/Participant__c-PII Compliant.layout-meta.xml
@@ -83,6 +83,18 @@
                 <behavior>Readonly</behavior>
                 <field>Conditions__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Gender__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Initials__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Date_of_Birth__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns/>
         <style>TwoColumnsTopToBottom</style>
