Visits (without icons)

--- a/force-app/main/default/layouts/Visit_Plan__c-Visit Plan Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Visit_Plan__c-Visit Plan Layout.layout-meta.xml
@@ -10,6 +10,10 @@
                 <behavior>Required</behavior>
                 <field>Name</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Clinical_Trial_Profile__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
@@ -47,6 +51,16 @@
         <layoutColumns/>
         <style>CustomLinks</style>
     </layoutSections>
+    <relatedLists>
+        <fields>NAME</fields>
+        <fields>Protocol_ID__c</fields>
+        <fields>Study_Title__c</fields>
+        <relatedList>Clinical_Trial_Profile__c.Visit_Plan__c</relatedList>
+    </relatedLists>
+    <relatedLists>
+        <fields>NAME</fields>
+        <relatedList>Visit__c.Visit_Plan__c</relatedList>
+    </relatedLists>
     <showEmailCheckbox>false</showEmailCheckbox>
     <showHighlightsPanel>false</showHighlightsPanel>
     <showInteractionLogPanel>false</showInteractionLogPanel>
