--- a/force-app/main/default/aura/StudyDetailView/StudyDetailView.cmp
+++ b/force-app/main/default/aura/StudyDetailView/StudyDetailView.cmp
@@ -69,7 +69,7 @@
                                 <c:RRNPathItem label="{!$Label.c.PG_RW_Title}"/>
                             </c:RRNavigationPath>
                             <div class="rr-width-limiter">
-                                <img class="contrast-logo" src="{!$Resource.PH_logo + '/iqvia.png'}"/>
+                                <img class="contrast-logo" src="{!$Resource.PH_logo + '/iqvia.jpg'}"/>
                             </div>
                         </aura:if>
                     </aura:if>
@@ -217,7 +217,7 @@
                     </aura:if>
 
                     <aura:if isTrue="{!v.currentTab == 'tab-visits'}">
-                        <p>Visits</p>
+                        <c:StudyVisits/>
                     </aura:if>
 
                     <aura:if isTrue="{!v.currentTab == 'tab-tasks'}">
