--- a/force-app/main/default/aura/SearchConditionsOfInterest/SearchConditionsOfInterest.cmp
+++ b/force-app/main/default/aura/SearchConditionsOfInterest/SearchConditionsOfInterest.cmp
@@ -2,18 +2,22 @@
     <aura:attribute name="searchCriterias" type="String[]"/>
     <aura:attribute name="originalItems" type="Object[]" default=""/>
     <aura:attribute name="displayedItems" type="List" default=""/>
-    <aura:attribute name="therapeuticAreas" type="Therapeutic_Area__c[]" default="[]"/>
-    <aura:attribute name="displayFooter" type="Boolean" default=""/>
+    <aura:attribute name="conditionsOfInterest" type="List" default=""/>
+    <aura:attribute name="conditionsOfInterestTemp" type="List" default=""/>
+    <aura:attribute name="isSaveList" type="Boolean"/>
+
+    <!--    <aura:attribute name="displayFooter" type="Boolean" default=""/>-->
     <aura:attribute name="bypass" type="Boolean" default=""/>
 
     <aura:handler name="init" value="{!this}" action="{!c.doInit}"/>
+    <aura:handler name="change" value="{!v.conditionsOfInterest}" action="{!c.doInit}"/>
 
     <aura:method name="show" action="{!c.show}"/>
     <aura:method name="hide" action="{!c.hide}"/>
 
-    <c:Popup aura:id="searchModal" title="Select Your Conditions of Interest" size="medium" showClose="false" primaryButtonLabel="Save">
+    <c:Popup aura:id="searchModal" title="Select Your Conditions of Interest" size="medium" showClose="false" primaryButtonLabel="Save" variant=" slds-float--right">
 
-        <lightning:input onchange="{!c.bulkSearch}" type="search" name="search" label="" variant="label-hidden" placeholder="Search for Condition"/>
+        <lightning:input onchange="{!c.bulkSearch}" aura:id="searchInput" type="search" name="search" label="" variant="label-hidden" placeholder="Search for Condition"/>
 
         <div class="alert-count-condition">
             You may only select to 5 conditions at any time.
@@ -23,20 +27,24 @@
                role="treegrid">
             <tbody>
 
-            <aura:iteration items="{!v.displayedItems}" var="ta">
+            <aura:iteration items="{!v.displayedItems}" var="coiWrapper">
                 <tr aria-level="1" aria-posinset="1" aria-selected="false" aria-setsize="4" class="slds-hint-parent"
                     tabindex="0">
                     <td class="slds-text-align_right" role="gridcell" style="width: 3.25rem;">
                         <div class="slds-checkbox">
-                            <lightning:input label="" type="checkbox" checked="{!ta.isSelected}"  value="{!ta}" onchange="{!c.handleChange}"/>
+                            <lightning:input label="" type="checkbox" checked="{!coiWrapper.isSelected}"  value="{!coiWrapper}" onchange="{!c.handleChange}"/>
                         </div>
                     </td>
                     <th class="slds-tree__item" data-label="Account Name" scope="row">
-                        <div class="slds-truncate">{!ta.therArea.Name}</div>
+                        <div class="slds-truncate">{!coiWrapper.coi.Therapeutic_Area__r.Name}</div>
                     </th>
                 </tr>
             </aura:iteration>
             </tbody>
         </table>
+        <aura:set attribute="footerButtons">
+            <button class="apollo-btn tertiary" id="Cancel" onclick="{!c.doCancel}">{!$Label.c.BTN_Cancel}</button>
+            <button class="apollo-btn primary" id="Save" onclick="{!c.doSave}">{!$Label.c.BTN_Save}</button>
+        </aura:set>
     </c:Popup>
 </aura:component>
